# OIDCAssertion

./: ENV  LICENSE  README.md  pyproject.toml
src/assertion/: create_assertion.py  create_key_and_cert.py  create_public_cert.py  create_signing_authority.py  decode.py  fingerprint.py  settings.py  token.py
src/assertion/protocols/: __init__.py  protocols.py
